nullaway_error_14117772-19B6-45F5-A160-B9ABD8A9E3BE.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/server/session/InMemoryWebSessionStore.java:230: error: [NullAway] dereferenced expression this.state.get() is @Nullable
			return this.state.get().equals(State.STARTED) || !getAttributes().isEmpty();
			                       ^
    (see http://t.uber.com/nullaway )
